fix: adjust login width for left aligned layouts

--- a/src/components/login/login.styles.scss
+++ b/src/components/login/login.styles.scss
@@ -6,6 +6,7 @@ $spacingWithIcon: 52px;
 	align-items: $login-align-items;
 	flex-direction: column;
 	text-align: $login-text-align;
+	width: 100%;
 
 	.inputField {
 		width: 280px;
